<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <include layout="@layout/toolbar" />

    <!-- TextView Titulo -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/title_contacto"
        android:textSize="30sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- EditText Subject con Material Design -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/editTextSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_contact"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- EditText E-mail con Material Design -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_contact"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- EditText Mensaje con Material Design -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/msj_contact"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Btn Enviar -->
    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_send" />


</LinearLayout>
